# vdc_module

./: .gitmodules  note.txt  pyproject.toml
src/: main.py  vixtss_module.py
vdc-vixtss-module/: vixtss_module.py
vdc_module/: __init__.py
vdc_module/voice/: __init__.py  speech_to_text.py  stt_module.py  text_to_speech.py  tts_module.py  vixtss_module.py
vdc_vixtss_module/: __init__.py  vixtss_module.py
