[project]
name = "vdc-vixtss-module"
version = "0.1.0"
description = "Text to speech module"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "vinorm (>=2.0.7,<3.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "underthesea (>=6.8.4,<7.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "torch (==2.2.2)",
    "torchaudio (==2.2.2)",
    "tts @ ./TTS",
    "deepfilternet (>=0.5.6,<0.6.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]

[tool.poetry]
name = "vdc_vixtss_module"
version = "0.1.0"
packages = [{include = "vdc_vixtss_module"}]

[tool.black]
line-length = 120


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
